--- a/app/partials/phone-list.html
+++ b/app/partials/phone-list.html
@@ -16,7 +16,7 @@
         <p>Current query: {{query}}</p>
         <p>Order by: {{orderProp}}</p>
         <ul class="phones">
-          <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail">
+          <li ng-repeat="phone in phones | filter:query | orderBy:orderProp" class="thumbnail phone-listing">
             <a href="#/phones/{{phone.id}}" class="thumb"><img ng-src="{{phone.imageUrl}}"></a>
             <a href="#phones/{{phone.id}}">{{phone.name}}</a>
             <p>{{phone.snippet}}</p>
